assignment1/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from /media/thanhnguyen2612/01D3670DD5838B40/Tien Thanh/HK201/Programming Languages/Assignment/assignment1/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'-'", "'-.'", "'!'", "'*'", "'*.'", "'\\'", 
                     "'\\.'", "'%'", "'+'", "'+.'", "'&&'", "'||'", "'Body'", 
                     "'Break'", "'Continue'", "'Do'", "'Else'", "'ElseIf'", 
                     "'EndBody'", "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", 
                     "'Function'", "'If'", "'Parameter'", "'Return'", "'Then'", 
                     "'Var'", "'While'", "'EndDo'", "<INVALID>", "<INVALID>", 
                     "'='", "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", 
                     "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BODY", "BREAK", "CONTINUE", "DO", "ELSE", 
                      "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNCTION", "IF", "PARAMETER", "RETURN", "THEN", 
                      "VAR", "WHILE", "ENDDO", "WS", "CMT", "EQ", "LP", 
                      "RP", "LS", "RS", "LB", "RB", "COLON", "DOT", "COMMA", 
                      "SEMI", "RELOP", "ID", "INTLIT", "FLOATLIT", "BOOLLIT", 
                      "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_arraylit = 0
    RULE_litlist = 1
    RULE_literal = 2
    RULE_program = 3
    RULE_globdecs = 4
    RULE_funcdecs = 5
    RULE_vardec = 6
    RULE_varlist = 7
    RULE_variable = 8
    RULE_dim = 9
    RULE_initlist = 10
    RULE_init = 11
    RULE_assign = 12
    RULE_ifstmt = 13
    RULE_cond_block = 14
    RULE_forstmt = 15
    RULE_iter_block = 16
    RULE_iter_init = 17
    RULE_iter_cond = 18
    RULE_iter_update = 19
    RULE_whilestmt = 20
    RULE_dowhilestmt = 21
    RULE_breakstmt = 22
    RULE_continuestmt = 23
    RULE_callstmt = 24
    RULE_returnstmt = 25
    RULE_stmtlist = 26
    RULE_stmt = 27
    RULE_funcdec = 28
    RULE_paramdec = 29
    RULE_bodydec = 30
    RULE_call = 31
    RULE_expr = 32
    RULE_relexpr = 33
    RULE_operand = 34
    RULE_exprlist = 35

    ruleNames =  [ "arraylit", "litlist", "literal", "program", "globdecs", 
                   "funcdecs", "vardec", "varlist", "variable", "dim", "initlist", 
                   "init", "assign", "ifstmt", "cond_block", "forstmt", 
                   "iter_block", "iter_init", "iter_cond", "iter_update", 
                   "whilestmt", "dowhilestmt", "breakstmt", "continuestmt", 
                   "callstmt", "returnstmt", "stmtlist", "stmt", "funcdec", 
                   "paramdec", "bodydec", "call", "expr", "relexpr", "operand", 
                   "exprlist" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    BODY=13
    BREAK=14
    CONTINUE=15
    DO=16
    ELSE=17
    ELSEIF=18
    ENDBODY=19
    ENDIF=20
    ENDFOR=21
    ENDWHILE=22
    FOR=23
    FUNCTION=24
    IF=25
    PARAMETER=26
    RETURN=27
    THEN=28
    VAR=29
    WHILE=30
    ENDDO=31
    WS=32
    CMT=33
    EQ=34
    LP=35
    RP=36
    LS=37
    RS=38
    LB=39
    RB=40
    COLON=41
    DOT=42
    COMMA=43
    SEMI=44
    RELOP=45
    ID=46
    INTLIT=47
    FLOATLIT=48
    BOOLLIT=49
    STRINGLIT=50
    UNCLOSE_STRING=51
    ILLEGAL_ESCAPE=52
    UNTERMINATED_COMMENT=53
    ERROR_CHAR=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ArraylitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def litlist(self):
            return self.getTypedRuleContext(BKITParser.LitlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_arraylit




    def arraylit(self):

        localctx = BKITParser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_arraylit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(BKITParser.LB)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.LB) | (1 << BKITParser.INTLIT) | (1 << BKITParser.FLOATLIT) | (1 << BKITParser.BOOLLIT) | (1 << BKITParser.STRINGLIT))) != 0):
                self.state = 73
                self.litlist()


            self.state = 76
            self.match(BKITParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LitlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LiteralContext)
            else:
                return self.getTypedRuleContext(BKITParser.LiteralContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_litlist




    def litlist(self):

        localctx = BKITParser.LitlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_litlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.literal()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 79
                self.match(BKITParser.COMMA)
                self.state = 80
                self.literal()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def BOOLLIT(self):
            return self.getToken(BKITParser.BOOLLIT, 0)

        def STRINGLIT(self):
            return self.getToken(BKITParser.STRINGLIT, 0)

        def arraylit(self):
            return self.getTypedRuleContext(BKITParser.ArraylitContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_literal)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INTLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(BKITParser.INTLIT)
                pass
            elif token in [BKITParser.FLOATLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(BKITParser.FLOATLIT)
                pass
            elif token in [BKITParser.BOOLLIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.match(BKITParser.BOOLLIT)
                pass
            elif token in [BKITParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.match(BKITParser.STRINGLIT)
                pass
            elif token in [BKITParser.LB]:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.arraylit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globdecs(self):
            return self.getTypedRuleContext(BKITParser.GlobdecsContext,0)


        def funcdecs(self):
            return self.getTypedRuleContext(BKITParser.FuncdecsContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.globdecs()
            self.state = 94
            self.funcdecs()
            self.state = 95
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobdecsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VardecContext)
            else:
                return self.getTypedRuleContext(BKITParser.VardecContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_globdecs




    def globdecs(self):

        localctx = BKITParser.GlobdecsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_globdecs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 97
                self.vardec()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdecsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.FuncdecContext)
            else:
                return self.getTypedRuleContext(BKITParser.FuncdecContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_funcdecs




    def funcdecs(self):

        localctx = BKITParser.FuncdecsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdecs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 103
                self.funcdec()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def varlist(self):
            return self.getTypedRuleContext(BKITParser.VarlistContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def initlist(self):
            return self.getTypedRuleContext(BKITParser.InitlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_vardec




    def vardec(self):

        localctx = BKITParser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(BKITParser.VAR)
            self.state = 110
            self.match(BKITParser.COLON)
            self.state = 111
            self.varlist()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.EQ:
                self.state = 112
                self.match(BKITParser.EQ)
                self.state = 113
                self.initlist()


            self.state = 116
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_varlist




    def varlist(self):

        localctx = BKITParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.variable()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 119
                self.match(BKITParser.COMMA)
                self.state = 120
                self.variable()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dim(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.DimContext)
            else:
                return self.getTypedRuleContext(BKITParser.DimContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_variable




    def variable(self):

        localctx = BKITParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(BKITParser.ID)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LS:
                self.state = 127
                self.dim()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(BKITParser.LS, 0)

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def RS(self):
            return self.getToken(BKITParser.RS, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_dim




    def dim(self):

        localctx = BKITParser.DimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dim)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(BKITParser.LS)
            self.state = 134
            self.match(BKITParser.INTLIT)
            self.state = 135
            self.match(BKITParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.InitContext)
            else:
                return self.getTypedRuleContext(BKITParser.InitContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_initlist




    def initlist(self):

        localctx = BKITParser.InitlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_initlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.init()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 138
                self.match(BKITParser.COMMA)
                self.state = 139
                self.init()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_init




    def init(self):

        localctx = BKITParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExprContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExprContext,i)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def LS(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LS)
            else:
                return self.getToken(BKITParser.LS, i)

        def RS(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RS)
            else:
                return self.getToken(BKITParser.RS, i)

        def getRuleIndex(self):
            return BKITParser.RULE_assign




    def assign(self):

        localctx = BKITParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(BKITParser.ID)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LS:
                self.state = 148
                self.match(BKITParser.LS)
                self.state = 149
                self.expr()
                self.state = 150
                self.match(BKITParser.RS)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.match(BKITParser.EQ)
            self.state = 158
            self.expr()
            self.state = 159
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BKITParser.IF, 0)

        def cond_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Cond_blockContext)
            else:
                return self.getTypedRuleContext(BKITParser.Cond_blockContext,i)


        def ENDIF(self):
            return self.getToken(BKITParser.ENDIF, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ELSEIF)
            else:
                return self.getToken(BKITParser.ELSEIF, i)

        def ELSE(self):
            return self.getToken(BKITParser.ELSE, 0)

        def stmtlist(self):
            return self.getTypedRuleContext(BKITParser.StmtlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_ifstmt




    def ifstmt(self):

        localctx = BKITParser.IfstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ifstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(BKITParser.IF)
            self.state = 162
            self.cond_block()
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.ELSEIF:
                self.state = 163
                self.match(BKITParser.ELSEIF)
                self.state = 164
                self.cond_block()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ELSE:
                self.state = 170
                self.match(BKITParser.ELSE)
                self.state = 171
                self.stmtlist()


            self.state = 174
            self.match(BKITParser.ENDIF)
            self.state = 175
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def THEN(self):
            return self.getToken(BKITParser.THEN, 0)

        def stmtlist(self):
            return self.getTypedRuleContext(BKITParser.StmtlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_cond_block




    def cond_block(self):

        localctx = BKITParser.Cond_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_cond_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.expr()
            self.state = 178
            self.match(BKITParser.THEN)
            self.state = 179
            self.stmtlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(BKITParser.FOR, 0)

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def iter_block(self):
            return self.getTypedRuleContext(BKITParser.Iter_blockContext,0)


        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def DO(self):
            return self.getToken(BKITParser.DO, 0)

        def stmtlist(self):
            return self.getTypedRuleContext(BKITParser.StmtlistContext,0)


        def ENDFOR(self):
            return self.getToken(BKITParser.ENDFOR, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_forstmt




    def forstmt(self):

        localctx = BKITParser.ForstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_forstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(BKITParser.FOR)
            self.state = 182
            self.match(BKITParser.LP)
            self.state = 183
            self.iter_block()
            self.state = 184
            self.match(BKITParser.RP)
            self.state = 185
            self.match(BKITParser.DO)
            self.state = 186
            self.stmtlist()
            self.state = 187
            self.match(BKITParser.ENDFOR)
            self.state = 188
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Iter_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iter_init(self):
            return self.getTypedRuleContext(BKITParser.Iter_initContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def iter_cond(self):
            return self.getTypedRuleContext(BKITParser.Iter_condContext,0)


        def iter_update(self):
            return self.getTypedRuleContext(BKITParser.Iter_updateContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_iter_block




    def iter_block(self):
